# masters-backend

./: .env  Cargo.toml
datasets/: .env  E_Kopija datoteke BARCODE ZA MITAB.xlsm  home_1_0_m.csv  home_2_0_m.csv  home_dataset.csv  home_dataset_1.csv  insert.txt
migrations/2021-08-14-121957_spaces/: down.sql  up.sql
migrations/2021-08-14-133106_pois/: down.sql  up.sql
migrations/2021-08-14-133605_poi_coordinates/: down.sql  up.sql
migrations/2021-08-14-134226_space_add_world_coordinates/: down.sql  up.sql
migrations/2021-08-14-141519_add_constraint_not_null/: down.sql  up.sql
migrations/2021-08-21-151446_add_pois/: down.sql  up.sql
migrations/2021-08-21-153837_renamecolumnpoi/: up.sql
migrations/2021-08-21-154300_update_fk_notnull/: up.sql
migrations/2021-08-21-171125_alter_coords/: up.sql
migrations/2021-08-21-174745_add_not_null_coords/: up.sql
migrations/2021-08-25-111011_add_coordinate_walls/: down.sql  up.sql
migrations/2021-08-25-113200_add_colors_poi/: down.sql  up.sql
migrations/2021-09-01-114451_add_dataset_and_compass_to_space/: up.sql
migrations/2021-09-01-200402_add_ble_table/: up.sql
migrations/2021-09-01-201209_alter_ble_table/: up.sql
migrations/2021-09-01-201325_alter_ble_table_nn/: up.sql
migrations/2021-09-05-221416_add_coord_size/: up.sql
py/: train.py
src/: db.rs  main.rs  schema.rs
src/astar/: model.rs
src/bles/: model.rs  route.rs
src/coordinates/: model.rs  route.rs
src/pois/: model.rs  route.rs
src/python_knn/: model.rs
src/route_request/: model.rs  route.rs
src/spaces/: model.rs  route.rs
src/websocket/: mod.rs  route.rs  session.rs
