[package]
name = "backend"
version = "0.1.0"
authors = ["Robert <roby0970@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3"
actix-cors = "0.5.4"
actix-web-actors = "3.0.0"
chrono = { version = "0.4", features = ["serde"] }

actix-codec = "0.3"


actix-files = "0.3"
awc = "2"
env_logger = "0.8"
futures = "0.3.1"
bytes = "0.5.3"
serde = "1.0.126"
serde_json = "1.0"

diesel = { version = "1.4.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4"
dotenv = "0.15.0"

log = "0.4"
r2d2 = "0.8"

lazy_static = "1.4"
listenfd = "0.3"
uuid = { version = "0.6", features = ["serde", "v4"] }

pathfinding = "2.2.1"